--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -1,8 +1,114 @@
 /* Empty. Add your own CSS if you like */
 #metific{
-	margin:5px;
-	width:144px;
-	height: 144px;
-	background-image: url(../src/images/Matific.png);
+	background-image: url(../src/images/Matific72.png);
+	background-size: 100% 100%;
     background-repeat: no-repeat;
+}
+
+#abcphonics{
+	background-image: url(../src/images/ABCPhonics72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#swalihiphonics{
+	background-image: url(../src/images/SwalihiPhonics.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#endlessalphabet{
+	background-image: url(../src/images/EndLessAlphabet.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#kakachui{
+	background-image: url(../src/images/KakaChui72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+	
+}
+
+#montessori{
+	background-image: url(../src/images/Montessori72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#onebillion3-5{
+	background-image: url(../src/images/OneBillion3-5-72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#onebillion4-6{
+	background-image: url(../src/images/OneBillion4-6-72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#graphogame{
+	background-image: url(../src/images/GraphoGame72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#smartyants{
+	background-image: url(../src/images/SmartyAnts72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#pixelparker{
+	background-image: url(../src/images/Pixel&Parker72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#eggyalphabet{
+	background-image: url(../src/images/EggyAlphabet72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#eggy100{
+	background-image: url(../src/images/Eggy100-72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#eggyjump{
+	background-image: url(../src/images/EggyJump72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#electriccompany{
+	background-image: url(../src/images/EelectricCompany72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+#coloringblock{
+	background-image: url(../src/images/ColoringBlock72.png);
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+.appIcon{
+	margin-left: 12px;
+	margin-right: 12px;
+	position: relative;
+	width: 72px;
+	height: 72px;
+	border: 1px solid transparent;
+	border-radius: 50% 50%;
+}
+
+.appIconRow{
+	width: 100%;
+	height: 72px;
+	position: relative;
+	margin-top: 45px;
+	text-align: center;
 }
