--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -112,3 +112,43 @@
 	margin-top: 45px;
 	text-align: center;
 }
+
+#languagesHeader{
+    margin-top:25px;
+    font-size: 25px;
+    color: #943776;
+    text-align: center;
+}
+
+#languages {
+    margin-top:25px;
+    padding-left: 20%;
+}
+
+#languages label {
+    float:left;
+    width:170px;
+    margin:4px;
+    background-color:#EFEFEF;
+    border-radius:4px;
+    border:1px solid #D0D0D0;
+    overflow:auto;
+
+}
+
+#languages label span {
+    text-align:center;
+    font-size: 32px;
+    padding:13px 0px;
+    display:block;
+}
+
+#languages label input {
+    position:absolute;
+    top:-20px;
+}
+
+#languages input:checked + span {
+    background-color:#404040;
+    color:#F7F7F7;
+}
